Revert "fix google analytics.. quick hack to use local ruhoh"
This reverts commit a39dc73ed41eb16fc62dc627f136f2c6ec17bc0b.

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ comments :
     colorscheme: light
 
 analytics :
-  provider : google
+  provider : true # change tracking id then enable here
   google : 
       tracking_id : 'UA-4513764-3'
   getclicky :
